cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Werror=uninitialized -Werror=return-type")


SET(TARGET freeway)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)
set(CMAKE_MACOSX_RPATH 0)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE_PATH})

LINK_DIRECTORIES($ENV{BOOST_LIB_PATH})

ADD_DEFINITIONS(-DMEMLOG_TIMESTAMP)
ADD_DEFINITIONS(-DCOMMON_LIBRARY)
IF(win32)
    ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB BOOST_ASIO_DISABLE_STD_ATOMIC)
ENDIF()

add_subdirectory(utils)
add_subdirectory(clock)
add_subdirectory(framework)
