cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Werror=uninitialized -Werror=return-type -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free")


SET(TARGET twoNode)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)


ADD_DEFINITIONS(-DMEMLOG_TIMESTAMP)
ADD_DEFINITIONS(-DCOMMON_LIBRARY)
ADD_DEFINITIONS(-D_USING_MULTI_LEVEL_WAITTING_LIST)
IF(win32)
    ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB BOOST_ASIO_DISABLE_STD_ATOMIC)
ENDIF()

SET(${TARGET}_SUBDIRS )

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
ADD_EXECUTABLE(${TARGET} ${${TARGET}_SRCLISTS}
        ${CMAKE_CURRENT_SOURCE_DIR}/../multiNode/MultiNode.h
        ${CMAKE_CURRENT_SOURCE_DIR}/../multiNode/MultiNode.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/../multiNode/WorkflowChecker.h
        ${CMAKE_CURRENT_SOURCE_DIR}/../multiNode/WorkflowChecker.cpp)

set_target_properties(${TARGET} PROPERTIES VERSION $ENV{BUILD_VERSION} SOVERSION $ENV{BUILD_VERSION})
#set_target_properties(${TARGET} PROPERTIES COTIRE_PREFIX_HEADER_IGNORE_PATH "boost/preprocessor")
#cotire(${TARGET})
TARGET_LINK_LIBRARIES(${TARGET} freeway clock log4cplus tbb boost_unit_test_framework boost_context boost_system profiler pthread)
if(win32)
    LINK_DIRECTORIES(C:\Windows\System32)
    TARGET_LINK_LIBRARIES(${TARGET} gdi32 user32 ws2_32)
endif()
if (CMAKE_BUILD_TYPE MATCHES "debug")
TARGET_LINK_LIBRARIES(${TARGET} tcmalloc_debug)
else()
TARGET_LINK_LIBRARIES(${TARGET} tcmalloc)
endif()

INSTALL(TARGETS ${TARGET}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)

FILE(GLOB_RECURSE ${TARGET}_HEADER_LISTS "*.h" "*.hpp")
INSTALL_FILES(include ${TARGET}_HEADER_LISTS)
